[package]
name = "puml-req"
version = "0.1.1"
edition = "2021"
authors = ["Nadhmi JAZI <nadhmi.jazi@gmail.com>"]
description = "A very simple plantuml client"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jazi007/puml-req"
keywords = [ "plantuml" ]


[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
glob = "0.3.1"
log = "0.4.21"
plantuml_encoding = "2.0.3"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.37.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
